--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.8"
 sly = "^0.4"
 argparse = "^1.4.0"
+antlr4-python3-runtime = "4.7.2"
 
 [tool.poetry.dev-dependencies]
 
